0.07 fund